Bug 320462 - Send an input event when a value is selected from the autocomple or list dropdown. r=smaug a=sicking